# airflow-alert-system

./: MIGRATION_GUIDE.md  README.md  airflow_ai_demo.py  airflow_failure_responder.py  pyproject.toml  requirements.txt
dags/callbacks/: trigger_failure_responder.py
docs/: AI_TEAM_WORKFLOW.md  CONFIGURATION.md  GPU_CLUSTER.md  PDF_INTEGRATION.md
examples/: example_dag_with_callbacks.py  usage_example.py
production/: MIGRATION_GUIDE.md  airflow_failure_responder.py  test_integration.py  unified_config.py
production/dags/: example.py
production/dags/callbacks/: trigger_failure_responder.py
src/: __init__.py
src/event_driven/: __init__.py  agentic_processor.py  airflow_client.py  callbacks.py  config.py  standalone_processor.py
tests/: __init__.py  test_config.py
